* Corrected permissions for users creating employee records (Chris T)
* Corrected error when trying to save employee location as new (Chris T)
* Corrected save as new overwriting existing for vendors/customers (Chris T)
* Logging improvements (Herman V)
* Fixed SQL errors in Goods and Services/All Items report (David B)
* Corrected issue saving country in contact.html (Pongracz I)

Chris T is Chris Travers
David B is David Bandel
Herman V is Herman Vierendeels
Pongracz I is Pongracz Istvan

Changelog for LedgerSMB 1.3.5
* Fixing Menu and Permissions bug 3430820 (Chris T)
* Fixing permissions bug 3433644 (Chris T)
* Fixing file not found printing HTML invoice (Chris T)
* Corrected join issues in generating sales orders (Erik H)
* Removed commits in child subroutines (Herman V)
* Correcting warnings about HOME not set (Chris T)
* Corrected debian-specific db creation issue (Pongracz I)
* Corrected company name representation in timecard->sales order (Chris T)
* Better error handling when currency not set (Chris T)
* Exposed adding currency for customer/vendor to UI (Chris T)
* Corrected POS roles as per bug 3434549 (Chris T)
* Updated manual per ticket 3435124 (Chris T)
* Removed intermediate LaTeX files (Erik H)
* Fixed error: css/scripts/create_batch.css not found (Erik H)
* Translation string updates Herman V)
* Additional upgrade checks added (Herman V)
* Better whitespace handling in upgrade scripts (from 1.2) (Herman V)
* Translation string fixes for Payment workflow (Herman V)
* Fixed UTF8 chars broken in printed HTML invoices (Chris T)

Chris T is Chris Travers
Erik H is Erik Huelsmann
Herman V is Herman Vierendeels
Pongracz I is Pongracz Istvan

Changelog for LedgerSMB 1.3.4
* Corrected case matching error in upgrade script (Chris T)
* Corrected version number on new databases (Chris T)
* Corrected multiple load errors on upgrade (David B)
* Corrected problem creating UTF-8 database on Debian (David B)
* Corrected display issues with numbers (Herman V)