@@ -149,9 +149,10 @@ sub transactions {
 
         my ( $warehouse, $warehouse_id ) = split /--/, $form->{warehouse};
 
+        #HV alias company.ct changed to company.c
         $query = qq|
 			SELECT DISTINCT o.id, o.ordnumber, o.transdate,
-				o.reqdate, o.amount, ct.legal_name, o.netamount, 
+				o.reqdate, o.amount, c.legal_name, o.netamount, 
 				o.entity_credit_account as $form->{vc}_id, ex.$rate AS exchangerate,
 		 		o.closed, o.quonumber, o.shippingpoint, 
 				o.shipvia, ee.name AS employee, o.curr, 
@@ -159,7 +160,7 @@ sub transactions {
 			FROM oe o
 			JOIN entity_credit_account eca  
                              ON (o.entity_credit_account = eca.id)
-                        JOIN company ct ON eca.entity_id = ct.entity_id
+                        JOIN company c ON eca.entity_id = c.entity_id
 			JOIN orderitems oi ON (oi.trans_id = o.id)
 			JOIN parts p ON (p.id = oi.parts_id)|;
 
@@ -200,7 +201,7 @@ sub transactions {
         $query .= qq| AND o.$form->{vc}_id = $form->{"$form->{vc}_id"}|;
     }
     elsif ( $form->{ $form->{vc} } ne "" ) {
-        $query .= " AND lower(ct.legal_name) LIKE ?";
+        $query .= " AND lower(c.legal_name) LIKE ?";
         push @queryargs, $name;
     }
 
