@@ -49,6 +49,7 @@
           </td>-->
           <td><?lsmb PROCESS select element_data=print.format ?></td>
           <td><?lsmb PROCESS select element_data=print.media ?> </td> 
+          <td><?lsmb PROCESS select element_data=print.lang ?> </td> 
           <?lsmb PROCESS input element_data = {
                  name = "formname"
                  type = "hidden"
