@@ -757,7 +757,7 @@ IN ROLE "lsmb_<?lsmb dbname ?>__contact_read";
 
 GRANT ALL ON partsvendor, partscustomer TO "lsmb_<?lsmb dbname ?>__part_create";
 GRANT INSERT ON parts, makemodel, partsgroup, assembly TO "lsmb_<?lsmb dbname ?>__part_create";
-GRANT ALL ON parts_id_seq TO "lsmb_<?lsmb dbname ?>__part_create";
+GRANT ALL ON parts_id_seq, partsgroup_id_seq TO "lsmb_<?lsmb dbname ?>__part_create";
 GRANT INSERT ON partstax TO "lsmb_<?lsmb dbname ?>__part_create";
 
 INSERT INTO menu_acl (node_id, acl_type, role_name)
