@@ -20,6 +20,12 @@ Changelog for LedgerSMB 1.3.6
 * Logging improvements (Herman V)
 * Fixed SQL errors in Goods and Services/All Items report (David B)
 * Corrected issue saving country in contact.html (Pongracz I)
+* Corrected permission denied to partsgroup_id_seq (Chris T)
+* Corrected discount_terms not being displayed after saving (Chris T)
+* Corrected language drop-down missing from email form (Chris T)
+* Customer search result label correction (Herman V)
+* Company name can now be prepopulated on login screen (Chris T)
+* Corrected SQL error in OE.pm (Herman V)
 
 Chris T is Chris Travers
 David B is David Bandel
